【环境配置】基础环境搭建完毕

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">android_sample_features</string>
+    <string name="app_name">DJI安卓工具箱</string>
 </resources>
