--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">大疆安卓</string>
+    <string name="app_name">DJI Tools</string>
+    <string name="cpu_cur_freq">CPU %1$d : Freq %2$s Hz</string>
+    <string name="cpu_stoped">CPU %1$d: Stopped</string>
+    <string name="cpu_online_status">CPU %1$d Online Status: %2$s</string>
+    <string name="cpu_online_status_online">Online</string>
+    <string name="cpu_online_status_offline">Offline</string>
 </resources>
